more display bugs squashed

--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,7 @@ hr
 	line-height: normal;
 	position: fixed;
 	top: 0px;
+	max-width: 1100px;
 	width: 100%;
 	text-align: center;
 	color: #fff;
